// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Icon /> by default should render the right structure 1`] = `
<i
  className="icon green tiny circular has-border inverted grey inverted"
  some="otherProps"
>
  <svg
    viewBox="0 0 24 24"
  >
    <path
      d="M9.67,13.55V12.49c0-2.11,3.48-3,3.48-4.66a1.73,1.73,0,0,0-1.89-1.48c-1.76,0-2.24,1.58-2.87,1L6.85,5.87a.45.45,0,0,1,0-.65A7.07,7.07,0,0,1,12,3c2.66,0,5.13,1.86,5.13,4.41,0,3.32-3.77,3.42-3.77,6.14a.48.48,0,0,1-.48.48h-2.7A.48.48,0,0,1,9.67,13.55Zm1.82,2.79a2.45,2.45,0,0,1,2.41,2.42,2.39,2.39,0,1,1-2.41-2.42Z"
      fill="currentColor"
    />
  </svg>
</i>
`;

exports[`<Icon /> if \`isButton\` is true should render the right structure 1`] = `
<i
  className="icon green tiny circular has-border inverted grey inverted is-button"
  role="button"
  some="otherProps"
  tabIndex={0}
>
  <svg
    viewBox="0 0 24 24"
  >
    <path
      d="M9.67,13.55V12.49c0-2.11,3.48-3,3.48-4.66a1.73,1.73,0,0,0-1.89-1.48c-1.76,0-2.24,1.58-2.87,1L6.85,5.87a.45.45,0,0,1,0-.65A7.07,7.07,0,0,1,12,3c2.66,0,5.13,1.86,5.13,4.41,0,3.32-3.77,3.42-3.77,6.14a.48.48,0,0,1-.48.48h-2.7A.48.48,0,0,1,9.67,13.55Zm1.82,2.79a2.45,2.45,0,0,1,2.41,2.42,2.39,2.39,0,1,1-2.41-2.42Z"
      fill="currentColor"
    />
  </svg>
</i>
`;

exports[`<Icon /> if \`isReversed\` is true should render the right structure 1`] = `
<i
  className="icon green tiny circular has-border inverted grey has-label inverted"
  some="otherProps"
>
  <Paragraph
    isCompact={false}
    size="medium"
    weight={null}
  >
    somelabel
  </Paragraph>
  <svg
    viewBox="0 0 24 24"
  >
    <path
      d="M9.67,13.55V12.49c0-2.11,3.48-3,3.48-4.66a1.73,1.73,0,0,0-1.89-1.48c-1.76,0-2.24,1.58-2.87,1L6.85,5.87a.45.45,0,0,1,0-.65A7.07,7.07,0,0,1,12,3c2.66,0,5.13,1.86,5.13,4.41,0,3.32-3.77,3.42-3.77,6.14a.48.48,0,0,1-.48.48h-2.7A.48.48,0,0,1,9.67,13.55Zm1.82,2.79a2.45,2.45,0,0,1,2.41,2.42,2.39,2.39,0,1,1-2.41-2.42Z"
      fill="currentColor"
    />
  </svg>
</i>
`;

exports[`<Icon /> if \`labelText\` is passed should render the right structure 1`] = `
<i
  className="icon green tiny circular has-border inverted grey has-label inverted"
  some="otherProps"
>
  <svg
    viewBox="0 0 24 24"
  >
    <path
      d="M9.67,13.55V12.49c0-2.11,3.48-3,3.48-4.66a1.73,1.73,0,0,0-1.89-1.48c-1.76,0-2.24,1.58-2.87,1L6.85,5.87a.45.45,0,0,1,0-.65A7.07,7.07,0,0,1,12,3c2.66,0,5.13,1.86,5.13,4.41,0,3.32-3.77,3.42-3.77,6.14a.48.48,0,0,1-.48.48h-2.7A.48.48,0,0,1,9.67,13.55Zm1.82,2.79a2.45,2.45,0,0,1,2.41,2.42,2.39,2.39,0,1,1-2.41-2.42Z"
      fill="currentColor"
    />
  </svg>
  <Paragraph
    isCompact={false}
    size="medium"
    weight={null}
  >
    hello world
  </Paragraph>
</i>
`;

exports[`<Icon /> if \`labelWeight\` and \`labelText\` is passed should render the right structure 1`] = `
<i
  className="icon green tiny circular has-border inverted grey has-label inverted"
  some="otherProps"
>
  <svg
    viewBox="0 0 24 24"
  >
    <path
      d="M9.67,13.55V12.49c0-2.11,3.48-3,3.48-4.66a1.73,1.73,0,0,0-1.89-1.48c-1.76,0-2.24,1.58-2.87,1L6.85,5.87a.45.45,0,0,1,0-.65A7.07,7.07,0,0,1,12,3c2.66,0,5.13,1.86,5.13,4.41,0,3.32-3.77,3.42-3.77,6.14a.48.48,0,0,1-.48.48h-2.7A.48.48,0,0,1,9.67,13.55Zm1.82,2.79a2.45,2.45,0,0,1,2.41,2.42,2.39,2.39,0,1,1-2.41-2.42Z"
      fill="currentColor"
    />
  </svg>
  <Paragraph
    isCompact={false}
    size="medium"
    weight="heavy"
  >
    someLabel
  </Paragraph>
</i>
`;
